fixed profile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,10 @@ body {
     border-radius: 20px;
     border: solid bisque 3px;
 }
+.pdf {
+    margin-left: 20px;
+    margin-bottom: 8px;
+}
 /* projects */
 .proj {
     margin: 25px;
